add JSON to julia dependencies

--- a/JuliaProject.toml
+++ b/JuliaProject.toml
@@ -1,6 +1,7 @@
 [deps]
 ArviZ = "131c737c-5715-5e2e-ad31-c244f01c1dc7"
 Soss = "8ce77f84-9b61-11e8-39ff-d17a774bf41c"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 
 [compat]
 julia = "1.5"
