add PyCall explicitly to requirements

--- a/JuliaProject.toml
+++ b/JuliaProject.toml
@@ -4,6 +4,7 @@ Soss = "8ce77f84-9b61-11e8-39ff-d17a774bf41c"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
 [compat]
 julia = "1.5"
